Navbar and banner section added

--- a/index.html
+++ b/index.html
@@ -7,14 +7,60 @@
 
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
+<body class="q-font">
     <!-- Header section starts here -->
     <header>
-
+        <nav>
+            <div class="navbar">
+                <div class="logo">
+                    <img src="assets/logo.png" alt="logo image">
+                    <H3>School</H3>
+                </div>
+                <div class="list">
+                    <ul>
+                        <li style="color: orange;">Home</li>
+                        <li style="color: skyblue;">About</li>
+                        <li style="color: rgba(5, 212, 223, 1)" >Facilities</li>
+                        <li style="color: rgba(93, 88, 239, 1);">Admission</li>
+                    </ul>
+                </div>
+                <div class="btn">
+                    <button class="n-btn">Contact</button>
+                </div>
+            </div>
+        </nav>
     </header>
+
     <!-- Main section starts here -->
+
     <main>
 
+        <!-- banner section starts here -->
+
+        <section>
+            <div class="banner">
+                <div class="b-description">
+                    <h1 class="b-title">
+                        <span style="color: orange;">Empowering</span> students from small age <span style="color: skyblue;">towards vision</span>
+                    </h1>
+                    <p>
+                        With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World.
+                    </p>
+                    <button class="enroll-btn">
+                        Enroll Now
+                    </button>
+                </div>
+                <div class="b-img">
+                    <img src="assets/hero-kids.png" alt="">
+                </div>
+            </div>
+        </section>
+        
+        <!-- standard curriculum section starts here -->
+
+        <section>
+            
+        </section>
     </main>
     <!-- Footer section starts here -->
     <footer>
