--- a/index.html
+++ b/index.html
@@ -127,12 +127,42 @@
                     </div>
                 </div>
             </div>
+            <button class="enroll-btn">
+                View All
+            </button>
         </section>        
         
     </main>
     <!-- Footer section starts here -->
     <footer>
-    
+        <div class="colom-one">
+            <div class="logo_title">
+                <img src="assets/logo.png" alt="">
+                <h2 class="kids">Kids
+                Education</h2>
+            </div>
+            <p>
+                Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.
+            </p>
+        </div>
+        <div class="about-s">
+            <h4>About School</h4>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Facilities</a></li>
+                <li><a href="">Admission</a></li>
+            </ul>
+        </div>
+        <div class="touch-img">
+            <h4 class="touch-title">keep In Touch</h4>
+            <div class="touch-images">
+                <a href=""><img src="assets/fb.png" alt=""></a>
+                <a href=""><img src="assets/dribble.png" alt=""></a>
+                <a href=""><img src="assets/twitter.png" alt=""></a>
+                <a href=""><img src="assets/google+.png" alt=""></a>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
