--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
             <div class="navbar">
                 <div class="logo">
                     <img src="assets/logo.png" alt="logo image">
-                    <H3>School</H3>
+                    <h3 class="school">School</h3>
+                    
+
                 </div>
                 <div class="list">
                     <ul>
@@ -51,7 +53,7 @@
                     </button>
                 </div>
                 <div class="b-img">
-                    <img src="assets/hero-kids.png" alt="">
+                    <img class="hero-kid" src="assets/hero-kids.png" alt="">
                 </div>
             </div>
         </section>
