--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         
         <!-- standard curriculum section starts here -->
 
-        <section class="curriculim" >
+        <section class="curriculum" >
             <h4 class="s-title">Standard curriculum</h4>
 
             <div class="cart-container" style="background-image: url('bg.png');">
