--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 </div>
             </div>
         </nav>
+        <marquee scrollamount="7" behavior="scroll" direction="left" height="30px" bgcolor="orange">Hello Everyone! Welcome to a new journey!!!</marquee>
     </header>
 
     <!-- Main section starts here -->
